# logaggregator-3

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml
database/: init.sql
src/: main.cpp
tests/: test_main.py
